# antigravity-manager-cli

./: .gitignore  Cargo.toml  README.md  antigravity-cli.py  install-quick.sh  install.sh
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  google_api.rs  keyring.rs  main.rs  types.rs
src/tui/: mod.rs  ui.rs
tui/: Cargo.toml
tui/src/: main.rs
