[package]
name = "antigravity-tui"
version = "1.2.0"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3.30"
base64 = "0.21.7"
dirs = "5.0.1"
